<?xml version="1.0" encoding="utf-8"?>
<resources>

  	 <string name="hello">Main Form</string>
  	 
    <string name="btnStr">Calling Add</string>
    
    <string name="app_name">Skuuz!2.3</string>
    
    <string name="friend_list">Friend List</string>
    
    <string name="username">Username</string>
    
    <string name="password">Password</string>
    
    <string name="login">Login</string>
    
    <string name="cancel">Cancel</string>
    
    <string name="messaging">Messaging</string>
    
    <string name="local_service_started">App service started</string>
    
    <string name="local_service_stopped">App service stopped</string>
    
    <string name="local_service_connected">local_service_connected</string>
    
    <string name="OK">OK</string>
    
    <string name="not_connected_to_service">Not connected to the service and 
	this is not supposed to happened so please inform this situation to 
	ahmetmermerkaya@hotmail.com</string>
	
    <string name="fill_both_username_and_password">Please fill both username and password</string>
    
    <string name="make_sure_username_and_password_correct">Please make sure that
	your username and password correct</string>
	
    <string name="user_offline">This user is offline</string>
    
    <string name="sign_up">Sign up</string>
    
    <string name="exit_application">Exit</string>
    
    <string name="password_again">Password(again)</string>
    
    <string name="email">E-mail</string>
    
    <string name="signup_fill_all_fields">Please fill all fields</string>
    
    <string name="signup_type_same_password_in_password_fields">Type same password in password fields</string>
    
    <string name="signup_failed">Sign up failed because of unknown reason</string>
    
    <string name="signup_username_crashed">Your username have been already taken, please try another username</string>
    
    <string name="signup_successfull">Your registration is completed successfully,\n you can login now </string>
    
    <string name="username_and_password_length_short">Username and password length must be at least 5</string>
    
    <string name="add_new_friend">Add new friend</string>
    
    <string name="no_friend">You have no friend,\n you can add new friends by menu</string>
    
    <string name="add">Add</string>
    
    <string name="request_sent">Your request has been sent</string>
    
    <string name="type_friend_username">Please type your friend username</string>
    
    <string name="new_friend_request_exist">New friend request</string>
    
    <string name="approve_selected_friends">Approve Selecteds and Discard Others</string>
    
    <string name="not_connected_to_network">There is no available connected network</string>
    
    <string name="message_cannot_be_sent">Message was not been able to sent</string>
    
    <string name="load">Wait</string>
    
    <string name="next">Go to next steps</string>
    
    <string name="about">About Me</string>
    
    <string name="title_activity_welcome">Welcome</string>
    
    <string name="skuuz_description">Skooz is a location based messenger. The people will register here by specifying their local place.They answers for some common questions like route from railway station, better hotels ,etc.You can use these data;also you can chat with your nearby users.</string>
    
    <string name="title_activity_registration1">Registration</string>
    
    <string name="basic">Basic</string>
    
    <string name="name">Full Name</string>
    
    <string name="male">Male</string>
    
    <string name="female">Female</string>
    
    <string name="privacy">Privacy</string>
    
    <string name="public1">Public</string>
    
    <string name="private1">Private</string>
    
    <string name="txt_ip_address">Get Started:\n1. Launch the RemoteDroid desktop application on your computer.\n2. Enter your IP address, or select a host from the list below:</string>
    
    <string name="txt_ip_error">Server not found</string>
    
    <string name="txt_connect">Connect</string>
    
    <string name="txt_help">Help</string>
    
    <string name="txt_help_dialog_0">To use this program, you will need the companion desktop application.  If you don\'t already have it, you can download it here:</string>
    
    <string name="txt_close">Close</string>
    
    <string name="txt_server_url">http://www.administrator.net/</string>
    
    <string name="txt_help_dialog_1">Once you have downloaded, installed and launched the application on your computer, it will display your IP address.  Enter this IP address on your phone to connect it to your computer.</string>
    
    <string name="txt_preferences">Preferences</string>
    
    <string name="txt_save">Save</string>
    
    <string name="txt_prefs_copy">Tap the menu button for preferences or help.</string>
    
    <string name="txt_recentlyUsedHosts">Visible Hosts:</string>
    
    <string name="toast_invalidIP">Invalid IP address!</string>
    
    <string name="txt_advanced">Advanced</string>
    
    <string name="txt_keyboard">Keyboard</string>
    
    <string name="menu_insert">Add Host</string>
    
    <string name="no_notes">No Hosts,Press Menu Button.</string>
    
    <string name="terms">Terms &amp; Conditions</string>
    
    <string name="conditions">**We are</string>
    
    <string name="security">Define Credentials</string>
    
    <string name="confirm">Confirm Password</string>
    
    <string name="perror">Passwords must match</string>
    
    <string name="done">Done;click Next button</string>
    
    <string name="lerror">Username error</string>
    
    <string name="accept">Submit</string>
    
    <string name="reject">Exit</string>
    
    <string name="checkbox">I Agreed with License</string>
    
    <string name="medium_text">* Minimum length is 8</string>
    
    <string name="title_activity_home">Home</string>
    
    <string name="title_activity_add">Add</string>
    
    <string name="ip">192.168.255.255</string>
    
    <string name="title_activity_pad">Pad</string>
    
    <string name="title_activity_preferences">Preferences</string>
    
    <string name="tap_to_click">Tap-to-click</string>
    
    <string name="title_activity_help">Help</string>
    
    <string name="large_text">PC 1</string>
    
    <string name="large_text2">PC 2</string>
    
    <string name="large_text3">PC 3</string>
    
    <string name="title_activity_connection">Connection</string>
    
    <string name="authentication">Authentication</string>
    
    <string name="title_activity_pc">PC</string>
    
    <string name="des">Desktop</string>
    
    <string name="tex">Text Editor</string>
    
    <string name="med">Media Player</string>
    
    <string name="pow">Power</string>
    
    <string name="title_activity_desktop">Desktop</string>
    
    <string name="title_activity_text">Text</string>
    
    <string name="title_activity_media">Media</string>
    
    <string name="title_activity_power">Power</string>
    
    <string name="newtext">New</string>
    
    <string name="shut">Shut Down</string>
    
    <string name="shut2">Restart</string>
    
    <string name="txt_ad">Admin</string>
    
    <string name="txt_not">Notifications</string>
    
    <string name="title_activity_admin">Admin</string>
    
    <string name="title_activity_notifications">Notifications</string>
    
    <string name="title_activity_run">Run</string>
    
    <string name="run">Running Processes</string>
    
    <string name="Forgot">Forgot Credentials</string>
    
    <string name="nuser">New to Skuuz!</string>
    
    <string name="title_activity_forgot">Recovery</string>
    
    <string name="question">Security Question</string>
    
    <string name="answer">Answer</string>
    
    <string name="title_activity_main">MainActivity</string>
    
    <string name="title_activity_permissions">Permissions</string>
    
    <string name="title_activity_log_screen">Log_screen</string>
    
    <string name="action_settings">Settings</string>
    
    <string name="hello_world">Hello world!</string>
    
    <string name="reg3">Security</string>
    
    <string name="title_activity_sign_upb">SignUpb</string>
    
    <string name="title_activity_sign_upe">SignUpe</string>
    
    <string name="gender">Gender</string>
    
    <string name="phone">Phone</string>
    
    <string name="essential">Essential</string>
    
    <string name="place">Place</string>
    
    <string name="ranswer">Repeat Answer</string>
    
    <string name="go">Go</string>

</resources>
