<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="?android:attr/textAppearanceLarge"
        android:typeface="serif" />

    <EditText
        android:id="@+id/txtluser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtlpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtluser"
        android:layout_below="@+id/txtluser"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <requestFocus
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <requestFocus
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/txtlpass"
        android:layout_marginTop="105dp" />

    <CheckBox
        android:id="@+id/checkforgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtlpass"
        android:layout_below="@+id/txtlpass"
        android:layout_marginTop="25dp"
        android:text="@string/Forgot" />

    <CheckBox
        android:id="@+id/checkregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkforgot"
        android:layout_below="@+id/checkforgot"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/imageView1"
        android:text="@string/nuser" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtluser"
        android:layout_alignTop="@+id/imageView1"
        android:contentDescription="@string/skuuz_description"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtlpass"
        android:layout_below="@+id/checkregister"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_next" />

</RelativeLayout>
